<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_filters</name>
  <version>2.9.0</version>
  <description>Depthai filters package</description>
  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>visualization_msgs</depend>
  <depend>depthai_ros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
