<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_ros_driver</name>
  <version>2.6.4</version>
  <description>Depthai ROS Monolithic node.</description>
  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>
  <author>Adam Serafin</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>image_pipeline</depend>
  <depend>depthai</depend>
  <depend>depthai_bridge</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <build_type>catkin</build_type>
  </export>
</package>
