<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_ros_driver</name>
  <version>2.7.4</version>
  <description>Depthai ROS Monolithic node.</description>
  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_auto</depend>
  <depend>camera_calibration</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>image_pipeline</depend>
  <depend>depthai</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_descriptions</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_examples</depend>
  <depend>pluginlib</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
