<?xml version="1.0"?>
<package format="3">
  <name>depthai_ros_msgs</name>
  <version>2.7.1</version>
  <description>Package to keep interface independent of the driver</description>

  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
