<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_ros_py_bindings</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>depthai</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>pybind11_vendor</depend>
  <depend>libopencv-dev</depend>
  <depend>rtabmap_slam</depend>
  <depend>laserscan_kinect</depend>
  <depend>ira_laser_tools</depend>
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
